[package]
name = "chat-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.16.0"
tokio = { version = "1.13.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
futures-util = "0.3.17"
futures = "0.3.17"
serde = { version = "1.0.130", features = ["derive"] }  
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }